Add FTP deployment GitHub Action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,10 @@ jobs:
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ secrets.FTP_SERVER }}
+          server: ftp.uat.qtloads.com
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /uat.qtloads.com/public_html/DNH_TEST/
+          server-dir: /public_html/DNH_TEST/
           protocol: ftp
           port: 21
           local-dir: ./
